# MedStart

./: .gitignore  LICENSE  README.md  _pages.html  admin.html  auth.html  c_catalog.html  c_chat.html  c_open_profile.html  c_profile.html  c_returns.html  catalog.html  chat.html  main.html  open_profile.html  portfolio.html  pyproject.toml  registration.html  student.html
student/: job_more.html  returns.html
